# py-monad

./: Comprehension.py  Maybe.py  Monad.py  Reader.py  main.py  pyproject.toml
